2002-10-02  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-retrieve-all) 
	(mew-shimbun-expire-all): Don't kill-buffer when original.

2002-10-01  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* shimbun/sb-airs.el (shimbun-airs-group-path-alist): Add entry
	for wl-en@lists.airs.net.

2002-10-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e21.el (w3m-favicon-type): New user variable.
	(w3m-setup-favicon): Check `w3m-favicon-type'.
	(w3m-buffer-favicon): Convert image to `w3m-favicon-type' instead
	of 'xpm.

	* shimbun/mew-shimbun.el (mew-shimbun-use-expire-pack): New user
	variable.
	(mew-shimbun-scan): Remove.
	(mew-shimbun-goto-unseen-folder): New function.
	(mew-shimbun-goto-folder): Don't display the unseen indicator of
	folder.
	(mew-shimbun-retrieve): Change how to scan the summary.
	(mew-shimbun-retrieve-article): Ditto.
	(mew-shimbun-re-retrieve-all): Ditto.
	(mew-shimbun-re-retrieve-article): Ditto.
	(mew-shimbun-retrieve-all): Rewrite.
	(mew-shimbun-scan-message): New function.
	(mew-shimbun-all-unseen): Remove.
	(mew-shimbun-unseen-check): Ditto.
	(mew-shimbun-unseen-remove): Ditt.
	(mew-shimbun-unseen-remove-all): Ditto.
	(mew-shimbun-unseen-remove-advice): Rewrite.
	(mew-shimbun-unseen-setup): Ditto.

2002-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-server-regexp): Fix the value;
	translate the comment into English.

2002-10-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-ibm-dev.el (shimbun-make-contents): Strip SPAN tag
	from subject.

2002-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-lynx-like-map): Bind key M-] to `w3m-zoom-in-image';
	bind key M-[ to `w3m-zoom-out-image'.
	(w3m-info-like-map): Ditto.
	(w3m-mode): Document those new keys.

2002-09-30  KURODA Chihiro  <chee@iijmio-mail.jp>

	* w3m.el (w3m-resize-image-scale): New user option.
	(w3m-toggle-inline-image): Call `w3m-zoom-in-image' without
	resizing.